# foreign-struct

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: ForeignAddTests.cmake  ForeignTests.cmake
example/: main.cpp
src/foreign/: array.h  enum.h  integer.h  library.cpp  struct.h  union.h  util.h
test/: CMakeLists.txt  array.cpp  cli.h  enum.cpp  hexlit.h  integer.cpp  main.cpp  struct.cpp  struct_stringify.h  test.h  union.cpp  union_stringify.h
